# playbook-engine

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  new-agreement-type.yml  spec-question.yml
.github/workflows/: ci.yml  docker-publish.yml  docker-smoke.yml  pages.yml
docs/: ADOPTING.md  ARCHITECTURE.md  CORPUS-LAYOUT.md  OPF-BUNDLE-BOUNDARY.md  OPF-SPEC-v0.1.md  OPF-SPEC.md  ORCHESTRATION.md  PLAN-FIRST.md  QUICK-COMPILE.md  REAL-CORPUS-DERIVATION.md
docs/prompts/: create-playbook.md
examples/: README.md  emergent-no-template.playbook.json  our-paper-baseline.playbook.json  our-paper-baseline.v0.2.playbook.json
examples/affiliation-config/: playbook.config.yaml
examples/fixtures/: invalid_bare_citation.json  invalid_dangling_observation_citation.json  invalid_missing_citation.json  invalid_missing_opf_version.json  invalid_out_of_scope_no_rationale.json  invalid_provenance_rule.json  invalid_unknown_opf_version.json  invalid_v0_2_dangling_acceptable_if_citation.json  invalid_v0_2_dangling_citation.json  invalid_v0_2_insufficient_evidence.json  invalid_v0_2_out_of_scope_no_rationale.json  invalid_v0_2_provenance_rule.json  minimal_valid.json  valid_v0_2_minimal.json
examples/judge-fixture/: config.yaml  (+1 more)
playbook_engine/: __init__.py  aar.py  agent_judge.py  agent_segmenter.py  artifact_store.py  canonicalize.py  chat_curate.py  citation_resolver.py  clause_aligner.py  clause_classifier.py  clause_differ.py  clause_library_compiler.py  clause_position_compiler.py  clause_tree.py  cli.py  config.py  corpus_linter.py  curation.py  deviation_classifier.py  docx_ingester.py  entity_registry.py  eval_harness.py  export_profile.py  extraction.py  floor_candidates.py  floor_judge.py  induction_version_selector.py  inspection_report.py  intake_plan.py  judgment.py  llm_segmentation_stage.py  llm_segmenter.py  llm_segmenter_batch.py  natural_sort.py  observation_builder.py  opf_accessors.py  pdf_ingester.py  pipeline.py  playbook_assembler.py  posture.py  (+19 more)
spec/: clause-tree.schema.json  playbook.schema-0.2.json  playbook.schema.json
tests/: test_aar.py  test_agent_judge.py  test_agent_segmenter.py  test_alias_sanity_check.py  test_artifact_store.py  test_canonicalize.py  test_chat_curate.py  test_citation_resolution.py  test_classification_config.py  test_clause_aligner.py  test_clause_classifier.py  test_clause_differ.py  test_clause_library_compiler.py  test_clause_position_compiler.py  test_clause_tree.py  test_cli.py  test_cli_judge.py  test_config.py  test_corpus_linter.py  test_cuad_base_taxonomy.py  test_deviation_classifier.py  test_docx_ingester.py  test_dynamics_fields.py  test_entity_registry.py  test_estimate_runtime_cache.py  test_eval_harness.py  test_example_fixtures.py  test_examples_validate.py  test_export_profile.py  test_extraction.py  test_floor_candidates.py  test_floor_judge.py  test_golden_affiliation.py  test_induction_version_selection.py  test_inspection_report.py  test_intake_plan.py  test_judgment.py  test_license.py  test_llm_segmentation_stage.py  test_llm_segmenter.py  (+41 more)
(+26 files in other folders)
